# bazel-cpp-rust-codecov

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
.devcontainer/: devcontainer.json
cpp/: BUILD.bazel  greeter.cpp  greeter.h  greeter_test.cpp  main.cpp
patches/: BUILD.bazel  hermetic_cc_toolchain_fix_u_flag.patch
rust/: BUILD.bazel  lib.rs  main.rs
