module(
    name = "bazel_cpp_rust_hello",
    version = "0.0.0",
)

# --- C++ via hermetic_cc_toolchain ---
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# Patch hermetic_cc_toolchain to fix -u flag handling for coverage builds
# See: https://github.com/uber/hermetic_cc_toolchain/issues/XXX
single_version_override(
    module_name = "hermetic_cc_toolchain",
    patches = ["//patches:hermetic_cc_toolchain_fix_u_flag.patch"],
)

toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(toolchains, "zig_sdk")

register_toolchains("@zig_sdk//toolchain/...")

# --- Rust via rules_rust ---
bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
