load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "greeter",
    srcs = ["lib.rs"],
    edition = "2021",
)

rust_binary(
    name = "hello",
    srcs = ["main.rs"],
    edition = "2021",
    deps = [":greeter"],
)

rust_test(
    name = "greeter_test",
    crate = ":greeter",
)
